--- a/backend/wp-content/themes/rschip/src/components/banner/banner.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/banner/banner.component.pug
@@ -1,13 +1,15 @@
 include ./banner.mixin.pug
 +banner({
+    bannerClass: "bannerMain",
     title: {
         big: "POWER",
         span1: "More power",
         span2: "for",
         span3: "your car with RSCHIP"
     },
-    description: "Increase power, save fuel, create dyno charts, Measure acceleration and more",
-    imageName: "main/imgBannerBg"
+    description: "Better throttle response, improved driving dynamic, Dual processor safety mechanism and more",
+    imageName: "main/imgBannerBg",
+    imageChipMain: "main/imgBannerImgChipMain",
 })
 
 
