--- a/backend/wp-content/themes/rschip/src/components/products/products.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/products/products.component.sass
@@ -33,6 +33,10 @@
         .select:last-child
             .select-box
                 border-right: none
+    .page__title-h2
+        .page__title-h3
+            color: #fff
+            text-transform: capitalize
 
 .productsBg
     position: absolute
