--- a/backend/wp-content/themes/rschip/src/components/products/productsCart.component.pug
+++ b/backend/wp-content/themes/rschip/src/components/products/productsCart.component.pug
@@ -50,6 +50,7 @@ section.products.productsCart
         img(src="assets/images/png/shared/imgShopBg.png", alt="imgShopBg")
     h2.page__title-h2.page__title-h2_big shop 
         span.page__title-h2_small.page__title-h2_absolute Get Started
+        .page__title-h3  Select your product
     #tabs.tab-contents
         .wrapper
             .productsTabs.tab-nav
