--- a/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
@@ -1,7 +1,16 @@
 /*banner*/
 .banner
     position: relative
-    
+    overflow: hidden
+    &.bannerMain
+        .pageText
+            margin-bottom: 0
+        .bannerImgBg__logo
+            display: flex
+            img
+                transform: scale(1.5)
+                +md-block
+                    transform: scale(1)
     &.bannerRs
         padding-bottom: 25%
         +sm-block
@@ -28,7 +37,7 @@
 
             +md-block
                 top: 58%
-                
+
     &.bannerGtr
         padding-bottom: 25%
         +sm-block
@@ -91,7 +100,6 @@
                 top: 82%
             +md-block
                 top: 58%
-
 
     .page__title-h1
 
@@ -159,7 +167,7 @@
                 top: 50%
                 transform: translate(-100%, -50%)
                 height: 20%
-            
+
             .selectBoxActionSelected
 
                 +sm-block
@@ -167,7 +175,7 @@
 
             .selectBoxText
                 display: none
-            
+
             .selectBoxContainer
 
                 border-bottom-left-radius: 0
@@ -177,7 +185,7 @@
                     border-radius: 16px
                     padding: 0
 
-                .select 
+                .select
                     .select-box
 
                         +sm-block
@@ -189,8 +197,6 @@
 
             .selectBoxLink
                 display: none
-    
-
 
 .bannerFlexContainer
     display: flex
@@ -224,6 +230,7 @@
         height: 768px
 
 .bannerImgBg
+    position: relative
     display: flex
     width: 100%
     height: 100%
@@ -241,12 +248,23 @@
         width: 100%
         +md-block
             width: auto
-            
+
+    &__logo
+        display: none
+        position: absolute
+        top: 50%
+        left: 50%
+        transform: translate(-50%, -50%)
+        +lg-block
+            top: 65%
+            left: 50%
+            transform: translate(-73%, -50%)
+
 .bannerImgChip
 
     position: absolute
     width: 100%
-    top: 65%
+    top: 60%
     right: 0
 
     picture
@@ -261,3 +279,45 @@
         right: -10px
         top: 135px
         width: auto
+
+.bannerImgChipMain
+    display: flex
+    align-items: center
+
+    margin-left: -35px
+   
+.banner.bannerMain
+    .bannerText
+        .pageText
+            +sm-block
+                width: 60%
+            +md-block
+                width: 50%
+    .bannerImgChipMain
+        flex-direction: row-reverse
+        margin-top: 5%
+        +sm-block
+            margin-top: -60px
+        +md-block
+            flex-direction: row
+            margin-top: 0
+        img
+            margin-left: -10px
+            +sm-block
+                margin-left: 0
+        div
+            +sm-block
+                margin-right: 17%
+            +md-block
+                margin-right: 0
+    .socialIcons
+        display: flex
+        position: relative
+        left: 5%
+        bottom: 7%
+        +sm-block
+            bottom: 20%
+            
+        +md-block
+            left: 25%
+            bottom: 90px
