--- a/backend/wp-content/themes/rschip/css/styles-calc.css
+++ b/backend/wp-content/themes/rschip/css/styles-calc.css
@@ -1349,7 +1349,7 @@
 
 .faqItemDetails__Summary {
   font-family: SFUIText-Regular;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #474747;
   font-size: 18px;
   line-height: 133%;
   letter-spacing: 0.05em;
@@ -3237,19 +3237,6 @@ html:not([data-scroll='0']) .header {
   flex-wrap: wrap;
 }
 
-.productRsControlsContainer::after {
-  content: '';
-  position: absolute;
-  width: 398.19px;
-  height: 368.41px;
-  top: 90%;
-  right: 0;
-  background: -webkit-gradient(linear, left top, right top, from(#FF4587), to(#FF5438));
-  background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%);
-  -webkit-filter: blur(500px);
-  filter: blur(500px);
-}
-
 .productRsControlsTitle {
   width: 100%;
   display: block;
@@ -3268,6 +3255,14 @@ html:not([data-scroll='0']) .header {
 .productRsControlsImg {
   width: 100%;
   text-align: center;
+  position: relative;
+}
+
+.productRsControlsImg .swiper-slide img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .productRsControlsToggles {
@@ -3276,6 +3271,7 @@ html:not([data-scroll='0']) .header {
   font-size: 20px;
   line-height: 28px;
   font-weight: bold;
+  max-height: 250px;
   margin-top: 12%;
   margin-left: 11%;
   margin-bottom: 10%;
@@ -3290,6 +3286,10 @@ html:not([data-scroll='0']) .header {
   padding: 11px 14px;
   opacity: 0.3;
   cursor: pointer;
+  -webkit-transition: all .3s ease;
+  transition: all .3s ease;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .productRsControlsToggelsItem:hover {
@@ -3297,15 +3297,51 @@ html:not([data-scroll='0']) .header {
   border-radius: 20px 0px 0px 20px;
 }
 
-.productRsControlsToggelsItem.active {
+.productRsControlsToggelsItem.swiper-slide-thumb-active {
   background: rgba(196, 196, 196, 0.2);
   border-radius: 20px 0px 0px 20px;
   opacity: 1;
 }
 
-.productRsControlsToggelsItem.prev,
-.productRsControlsToggelsItem.next {
-  opacity: 0.7;
+.productRsControlsToggelsItem::after {
+  content: '';
+  position: absolute;
+  width: 398.19px;
+  height: 368.41px;
+  top: 90%;
+  right: 0;
+  -webkit-filter: blur(164px);
+  filter: blur(164px);
+  opacity: 0;
+}
+
+.productRsControlsToggelsItem.swiper-slide-thumb-active::after {
+  opacity: 1;
+}
+
+.page_bgRed::after {
+  background: -webkit-gradient(linear, left top, right top, from(#FF4587), to(#FF5438));
+  background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%);
+}
+
+.page_bgYellow::after {
+  background: -webkit-gradient(linear, left top, right top, from(#FDE720), to(#FF9838));
+  background: linear-gradient(90deg, #FDE720 0%, #FF9838 100%);
+}
+
+.page_bgGray::after {
+  background: -webkit-gradient(linear, left top, right top, from(#B2B2B2), to(#F4F7F7));
+  background: linear-gradient(90deg, #B2B2B2 0%, #F4F7F7 100%);
+}
+
+.page_bgBlue::after {
+  background: -webkit-gradient(linear, left top, right top, from(#01D1FF), to(#38FFFF));
+  background: linear-gradient(90deg, #01D1FF 0%, #38FFFF 100%);
+}
+
+.page_bgGreen::after {
+  background: -webkit-gradient(linear, left top, right top, from(#25FF01), to(#60FF38));
+  background: linear-gradient(90deg, #25FF01 0%, #60FF38 100%);
 }
 
 /*productRsSafest*/
@@ -3503,7 +3539,7 @@ html:not([data-scroll='0']) .header {
   justify-content: center;
 }
 
-.productSliderGallary__Thumbnails.gallery-thumbs .swiper-slide-active {
+.productSliderGallary__Thumbnails.gallery-thumbs .swiper-slide-thumb-active {
   opacity: 1;
   border: 1px solid;
   border-radius: 15px;
@@ -6135,7 +6171,7 @@ textarea::placeholder {
   }
 
   .productRsControlsImg {
-    width: auto;
+    width: 40%;
     margin-left: -3%;
   }
 
