--- a/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/productSlider/productSlider.component.sass
@@ -117,7 +117,7 @@
                 display: flex
                 align-items: center
                 justify-content: center
-            .swiper-slide-active
+            .swiper-slide-thumb-active
                 opacity: 1
                 border: 1px solid
                 border-radius: 15px
