--- a/backend/wp-content/themes/rschip/src/pug/templates/template.pug
+++ b/backend/wp-content/themes/rschip/src/pug/templates/template.pug
@@ -89,4 +89,5 @@ html(lang="en" data-scroll='0')
             script(src="js/cartProducts/cartProducts.component.js")
             script(src="js/performance/performance.component.js")
             script(src="js/products/productsCart.component.js")
+            script(src="js/productRsControls/productRsControls.component.js")
             
