--- a/backend/wp-content/themes/rschip/src/components/faq/faq.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/faq/faq.component.sass
@@ -58,7 +58,7 @@
     cursor: pointer
     &__Summary
         font-family: #{$SFUIText}-Regular
-        border-bottom: 1px solid #fff
+        border-bottom: 1px solid #474747
         font-size: 18px
         line-height: 133%
         letter-spacing: 0.05em
