--- a/backend/wp-content/themes/rschip/src/components/productRsControls/productRsControls.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/productRsControls/productRsControls.component.sass
@@ -18,17 +18,8 @@
 
     +md-block
         margin: 0px 20px
+    
 
-    &::after
-        content: ''
-        
-        position: absolute
-        width: 398.19px
-        height: 368.41px
-        top: 90%
-        right: 0
-        background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
-        filter: blur(500px)
 
 .productRsControlsTitle
     width: 100%
@@ -64,11 +55,18 @@
 .productRsControlsImg
     width: 100%
     text-align: center
+    position: relative
     +sm-block
-        width: auto
+        width: 40%
         margin-left: -3%
     +md-block
         margin-left: -10%
+    
+    .swiper-slide
+        img
+            width: 100%
+            height: 100%
+            object-fit: cover
 
 
 .productRsControlsToggles
@@ -77,6 +75,7 @@
     font-size: 20px
     line-height: 28px
     font-weight: bold
+    max-height: 250px
    
     margin-top: 12%
     margin-left: 11%
@@ -93,6 +92,9 @@
         width: 25%
         margin-top: 8% 
         margin-left: 0
+    
+    .swiper-wrapper
+        // transform: translate3d(0px,0,0) !important
 
 
 .productRsControlsToggelsItem
@@ -101,13 +103,51 @@
     padding: 11px 14px
     opacity: 0.3
     cursor: pointer
+    transition: all .3s ease
+    box-sizing: border-box
+
     &:hover
         background: rgba(196, 196, 196, 0.2)
         border-radius: 20px 0px 0px 20px
-    &.active
+    &.swiper-slide-thumb-active
         background: rgba(196, 196, 196, 0.2)
         border-radius: 20px 0px 0px 20px
         opacity: 1
-    &.prev,
-    &.next
+    // &.prev,
+    // &.next
         opacity: 0.7
+
+    &::after
+        content: ''
+        position: absolute
+        width: 398.19px
+        height: 368.41px
+        top: 90%
+        right: 0
+        // background: linear-gradient(90deg, #B2B2B2 0%, #F4F7F7 100%)
+        // filter: blur(500px)
+        filter: blur(164px)
+        opacity: 0
+        
+    &.swiper-slide-thumb-active
+        &::after
+            opacity: 1
+            
+
+
+.page
+    &_bgRed
+        &::after
+            background: linear-gradient(90deg, #FF4587 0%, #FF5438 100%)
+    &_bgYellow
+        &::after
+            background: linear-gradient(90deg, #FDE720 0%, #FF9838 100%)
+    &_bgGray
+        &::after
+            background: linear-gradient(90deg, #B2B2B2 0%, #F4F7F7 100%)
+    &_bgBlue
+        &::after
+            background: linear-gradient(90deg, #01D1FF 0%, #38FFFF 100%)
+    &_bgGreen
+        &::after
+            background: linear-gradient(90deg, #25FF01 0%, #60FF38 100%)
