--- a/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/banner/banner.component.sass
@@ -267,11 +267,7 @@
     top: 60%
     right: 0
 
-    picture
-        display: flex
-        width: 100%
-        justify-content: center
-
+    
     +sm-block
         top: 61%
 
@@ -285,6 +281,12 @@
     align-items: center
 
     margin-left: -35px
+    picture
+        max-width: 195px
+        display: flex
+        width: 100%
+        justify-content: center
+
    
 .banner.bannerMain
     .bannerText
