--- a/backend/wp-content/themes/rschip/src/components/productRsControls/productRsControls.component.sass
+++ b/backend/wp-content/themes/rschip/src/components/productRsControls/productRsControls.component.sass
@@ -106,7 +106,9 @@
     transition: all .3s ease
     box-sizing: border-box
 
-    &:hover
+    &:hover,
+    &:active,
+    &:focus
         background: rgba(196, 196, 196, 0.2)
         border-radius: 20px 0px 0px 20px
     &.swiper-slide-thumb-active
@@ -116,6 +118,7 @@
     // &.prev,
     // &.next
         opacity: 0.7
+    
 
     &::after
         content: ''
@@ -127,6 +130,9 @@
         // background: linear-gradient(90deg, #B2B2B2 0%, #F4F7F7 100%)
         // filter: blur(500px)
         filter: blur(164px)
+        -webkit-filter: blur(164px)
+        -moz-filter: blur(164px)
+        -ms-filter: blur(164px)
         opacity: 0
         
     &.swiper-slide-thumb-active
